fix bug in objective card scoring